<resources>

    <string name="action_settings">Settings</string>
    //default english
    <string name="app_name">Agri_Hub</string>


    <string-array name="vegitable">
        <item>Select Items</item>
        <item>Cauliflowers</item>
        <item>Tomatoes</item>
        <item>Potato</item>
        <item>Onions</item>
        <item>Carrots</item>
        <item>Cabbages</item>
        <item>Cucumbers</item>
        <item>Ladies Fingers</item>
        <item>Wheaties</item>
        <item>Apples</item>
        <item>Oranges</item>
        <item>Bananas</item>
    </string-array>

    <!-- Country List -->
    <string-array name="country_list">
        <item>India</item>
        <item>USA</item>
        <item>Canada</item>
        <item>Australia</item>
        <item>UK</item>
    </string-array>

    <!-- State List -->
    <string-array name="state_list">
        <item>Odisha</item>
        <item>Andhra Pradesh</item>
        <item>Bihar</item>
        <item>Delhi</item>
        <item>Maharashtra</item>
        <item>Rajasthan</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>


    <string-array name="number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="weights">
        <item>1kg</item>
        <item>2kg</item>
        <item>500gm</item>
        <item>200gm</item>
        <item>100gm</item>
    </string-array>


    <string name="upload_and_produce">Upload and Produce</string>
    <string name="manage_product">Manage Product</string>
    <string name="approval">Approval</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="referesh">Referesh</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_email">Update Email</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="log_out">Log Out</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="signup_now">Signup Now</string>
    <string name="register_here">Register Here</string>
    <string name="full_name">Full Name*</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="Email">Email*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="enter_your_10_digit_phone_number_91">Enter Your 10 digit phone number(+91)</string>
    <string name="gender">Gender*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_date_of_birth_dd_mm_yyyy">Select Date of Birth (dd/mm/yyyy)*</string>
    <string name="select_your_date_of_birth_dd_mm_yyyy">Select Your Date of Birth (dd/mm/yyyy)</string>
    <string name="Password">Password*</string>
    <string name="pwd">Password</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="cmpwd">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="do_you_have_an_existing_account">Do you have an existing account?</string>
    <string name="lgn">Login</string>
    <string name="please_enter_the_registered_email_to_get_the_reset_link">Please enter the registered email to get the reset link</string>
    <string name="emailf">Email*</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_to">Welcome to</string>
    <string name="agri_hub">Agri_Hub</string>
    <string name="farmer_login">Farmer Login</string>
    <string name="user_login">User Login</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="rate_this_product">Rate this product</string>
    <string name="write_a_review">Write a review...</string>
    <string name="submit">Submit</string>
    <string name="total_ratings_0">Total Ratings: 0</string>
    <string name="upload_your_profile_pic">Upload Your profile pic</string>
    <string name="choose_form_you_device">Choose form you device</string>
    <string name="upload">Upload</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_price">₹ Enter product price</string>
    <string name="product_price">Product Price</string>
    <string name="product_available">Product Available</string>
    <string name="enter_available_quantity">Enter available quantity</string>
    <string name="product_image">Product Image</string>
    <string name="upload1">Upload</string>
    <string name="no_results_found">No results found</string>
    <string name="edit">Edit</string>
    <string name="available">Available</string>
    <string name="productprice">ProductPrice</string>
    <string name="_0_ratings">0 ratings</string>
    <string name="rate_now">Rate Now</string>
    <string name="user_name">User Name</string>
    <string name="user_review">User Review</string>
    <string name="product_name1">Product Name</string>
    <string name="_0">(0)</string>
    <string name="price">Price</string>
    <string name="available1">Available</string>
    <string name="loading">Loading...</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="give_product_s_details">Give details about product</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="type">Type</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chemical_used">Chemical Used?</string>
    <string name="how_much_and_which">How much (%) and which?</string>
    <string name="variants">Variants</string>
    <string name="more_details">More Details</string>
    <string name="net_quantity">Net Quantity</string>
    <string name="product_description">Product Description</string>
    <string name="organic">Organic</string>
    <string name="product_id">Product Id</string>
    <string name="customers_review">Customer Reviews</string>
    <string name="chemical_details">Which Chemical</string>
    <string name="share_your_thoughts_to_other_customers">Share your thoughts to other customers</string>
    <string name="address">Address</string>
    <string name="order_summary">Order Summary</string>
    <string name="payment">Payment</string>
    <string name="packOf">PACK OF</string>
    <string name="Price">PRICE</string>
    <string name="Continue">CONTINUE</string>
    <string name="Home">Home</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="opps_no_items_founds">Opps!no items founds!</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="select_variant">Select Variant</string>
    <string name="select_variant_here">Select variant here</string>
    <string name="variant1">Variant1:</string>
    <string name="variant2">Variant2:</string>
    <string name="variant3">Variant3:</string>
    <string name="variant4">Variant4:</string>
    <string name="variant5">Variant5:</string>
    <string name="weight">(Weight)</string>


</resources>
