<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/referesh"
        android:icon="@drawable/ic_refresh_white"
        android:alphabeticShortcut="r"
        android:orderInCategory="1"
        android:id="@+id/menu_refresh"
        app:showAsAction="ifRoom" />

    <item android:title="@string/update_profile"
        android:id="@+id/menu_update_profile" />

    <item android:title="@string/update_email"
        android:id="@+id/menu_update_email"/>

    <item android:title="@string/settings"
        android:id="@+id/menu_settings"/>

    <item android:title="@string/change_password"
        android:id="@+id/menu_change_password"/>

    <item android:title="@string/delete_profile"
        android:id="@+id/menu_delete_profile"/>

    <item android:title="@string/log_out"
        android:id="@+id/menu_logout"/>

</menu>