<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".UserRegistration">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!--        <androidx.appcompat.widget.Toolbar-->
        <!--            android:id="@+id/toolbar"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:navigationIcon="?attr/homeAsUpIndicator"-->
        <!--            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="100dp"
            android:alpha="0.6"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundstyle"
                android:orientation="vertical"
                android:padding="7dp">


                <!-- Heading -->
                <TextView
                    android:id="@+id/heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_here"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Full Name -->
                <TextView
                    android:id="@+id/for_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_name"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#666666"
                    android:textStyle="bold" />

                <!-- Email -->
                <TextView
                    android:id="@+id/for_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHint="#666666"
                    android:textStyle="bold" />

                <!-- Phone Number -->
                <TextView
                    android:id="@+id/for_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_10_digit_phone_number_91"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#666666"
                    android:textStyle="bold" />

                <!-- Gender -->
                <TextView
                    android:id="@+id/for_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/for_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/male"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RadioGroup>

                <!-- Date of Birth -->
                <TextView
                    android:id="@+id/for_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date_of_birth_dd_mm_yyyy"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_your_date_of_birth_dd_mm_yyyy"
                    android:focusable="false"
                    android:clickable="true"
                    android:textColor="#000000"
                    android:textColorHint="#666666"
                    android:textStyle="bold" />

                <!-- Password -->
                <TextView
                    android:id="@+id/for_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Password"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#666666"
                    android:textStyle="bold" />

                <!-- Confirm Password -->
                <TextView
                    android:id="@+id/for_cpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cmpwd"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#666666"
                    android:textStyle="bold" />

                <!-- Registration Button -->
                <Button
                    android:id="@+id/button"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/color_shape"
                    android:text="@string/registration"
                    android:textColor="#FFFFFF" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <!-- Existing Account -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/for_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do_you_have_an_existing_account"
                        android:layout_marginTop="30dp"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lgn"
                        android:textColor="#C81010"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/for_login"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="30dp" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
