<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    app:cardElevation="12dp"
    android:layout_margin="5dp"
    android:padding="8dp"
    android:background= "@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@drawable/search_bg">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/farmerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#757575"
        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.1"
        android:layout_gravity="center"
        android:progressTint="@color/orange"
        android:isIndicator="true"
        style="?android:attr/ratingBarStyleSmall"/>

    <TextView
        android:id="@+id/rating_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="4dp"
        android:text="@string/_0"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:gravity="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/productWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/product_availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available1"
        android:gravity="center"
        android:textColor="@android:color/black" />


</LinearLayout>
</androidx.cardview.widget.CardView>