<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FarmerLoginActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="100dp"
        android:alpha="0.65"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="150dp"
            android:layout_marginVertical="170dp"
            android:elevation="10dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="365dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#7C4DFF"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundstyle"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
                android:padding="8dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roundstyle"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp" />

                <ImageView
                    android:id="@+id/eyeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="7dp"
                    android:padding="8dp"
                    android:src="@drawable/baseline_visibility_off_24" />
            </RelativeLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundstyle"
                android:backgroundTint="#946FFB"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundstyle"
                android:backgroundTint="#946FFB"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ifNotRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="450dp"
        android:text="@string/not_yet_registered"
        android:textColor="@color/Red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signupNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="450dp"
        android:text="@string/signup_now"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>