<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordForUserActivity"
    android:background="@color/light_grey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.PopupOverlay" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textview_reset_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_the_registered_email_to_get_the_reset_link"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_reset_email"
                android:layout_below="@id/textview_reset_header"
                android:layout_marginTop="50dp"
                android:text="@string/emailf"
                android:textColor="#555555"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittext_reset_email"
                android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
                android:hint="@string/enter_your_email_here"
                android:layout_below="@+id/textview_reset_email" />

            <Button
                android:id="@+id/button_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext_reset_email"
                android:text="@string/reset_password"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp" />

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="150dp"
                android:layout_marginVertical="170dp"
                android:elevation="10dp"
                android:visibility="gone"/>

        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>